feat: improve color select

--- a/public/popup.html
+++ b/public/popup.html
@@ -64,7 +64,7 @@
         <ul class="guide-list">
           <li><strong>Hover:</strong> See properties in tooltip</li>
           <li><strong>Click:</strong> Measure distance between elements</li>
-          <li><strong>Shortcut:</strong> <kbd>Cmd+Shift+P</kbd> to toggle</li>
+          <li><strong>Shortcut:</strong> <kbd>Cmd+Shift+.</kbd> (Mac) or <kbd>Ctrl+Shift+.</kbd> (Windows/Linux) to toggle</li>
         </ul>
       </div>
     </div>
